--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
   "license": "MIT",
   "devDependencies": {
     "jest": "^19.0.2"
+  },
+  "dependencies": {
+    "commander": "^2.9.0",
+    "express": "^4.15.2",
+    "s3-download": "^1.0.0"
   }
 }
