--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "commander": "^2.9.0",
     "express": "^4.15.2",
+    "random-seed": "^0.3.0",
     "s3-download": "^1.0.0"
   }
 }
