--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "bugs": {
     "url": "https://github.com/cskeppstedt/powergeneratorn-v3/issues"
   },
+  "engines": {
+    "node": "^7.9.0"
+  },
   "license": "MIT",
   "devDependencies": {
     "jest": "^19.0.2"
