--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": "standard",
+  "extends": ["standard", "plugin:jest/recommended"],
   "plugins": [ "jest" ],
   "env": {
     "jest/globals": true,
